@@ -1,3 +1,9 @@
+2010-09-12  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* GledView/MCW_View.cxx:
+	Do not set range for argument value weed if its default value is
+	smaller than the anticipated step.
+
 2010-08-06  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* Gled/GThread.cxx:
